@@ -3,9 +3,11 @@ This file shows the changes in recent releases of MODx. The most current release
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
 
-MOD 0.9.5 beta 2 (rev 1418 - September 14, 2006)
+MOD 0.9.5 beta 2 (rev 1429 - September 16, 2006)
 ====================================
 
+* Modified export_site.static.php to handle proper response codes (1429)
+* Modified getSettings() to only include or load system/user settings once per request (1429)
 * Remove hard coded default Manager style (1418)
 * Add 'keywords' option to meta tag manager (1418)
 * Updated Wayfinder to latest version for 0.9.5 beta2 build. (1396-1398)
